...
  /// @returns プリセットに対応するラベル。元画像の比率は `Original`
  String get label {
    switch (this) {
      case AspectRatioPreset.original:
        return 'Original';
      case AspectRatioPreset.square:
        return '1:1';
      case AspectRatioPreset.ratio3x2:
        return '3:2';
      case AspectRatioPreset.ratio2x3:
        return '2:3';
      case AspectRatioPreset.ratio4x3:
        return '4:3';
...
